Add .gitignore file and update configuration settings
- Created a .gitignore file to exclude output, weights, and IDE files.
- Updated runtime configuration: increased checkpoint frequency to 200 and evaluation frequency to 10.
- Modified COCO detection evaluator to include IoU@0.1.
- Adjusted optimizer settings: increased total epochs to 400 and updated learning rate scheduler milestones.
- Enhanced CocoEvaluator class to support IoU@0.1 evaluation and logging.
- Updated evaluation logic to handle IoU@0.1 statistics in the detection engine.

--- a/rtdetrv2_pytorch/configs/dataset/coco_detection.yml
+++ b/rtdetrv2_pytorch/configs/dataset/coco_detection.yml
@@ -3,6 +3,7 @@ task: detection
 evaluator:
   type: CocoEvaluator
   iou_types: ['bbox', ]
+  include_iou_10: True
 
 # num_classes: 365
 # remap_mscoco_category: False
